fix: reCAPTCHA component is creating a overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,7 +86,6 @@
   html,
   body {
     @apply bg-background text-foreground;
-    overflow-x: hidden;
   }
   html {
     scroll-behavior: smooth;
